RST files are directly created from notebooks using nbconvert

--- a/docs/source/source/BlockSlide_2.ipynb
+++ b/docs/source/source/BlockSlide_2.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Blockslide 2\n",
+    "# Block Slide 2\n",
     "## OCP Description\n",
     "Let's introduce a second phase to the previous example where the block will have to return to it's original position. Because we know friction will switch direction when we slide the block back, the equations of motion change. Since phase A will not change, lets copy everything up until we start initiating the objective function. "
    ]
