--- a/docs/source/source/BlockSlide_3.ipynb
+++ b/docs/source/source/BlockSlide_3.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Blockslide 3\n",
+    "# Block Slide 3\n",
     "## OCP Description\n",
     "Lets introduce an extra dimension. Now the block can slide in 2D. We will assume the block is on 4 cartwheels and can move freely without friction. Lets add linear drag in both directions with a coefficient of friction of 1.05. The block starts at (1,-2) with zero speed, should reach the mid position (0,2) with any given speed, and final position (-1,-2) with zero speed, while dodging an circular object with a radius of 1[m] at (0,0) while minimizing input force."
    ]
@@ -247,28 +247,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "problem.objective_function = (\n",
-    "    phase_A.integral_variables[0] +phase_A.integral_variables[1] + phase_B.integral_variables[0] + phase_B.integral_variables[1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    phase_A.integral_variables[0] +phase_A.integral_variables[1] + phase_B.integral_variables[0] + phase_B.integral_variables[1])\n",
     "# Bug\n",
     "phase_B.guess.integral_variables = [[0],[0]]"
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "## Settings\n",
     "To converge quicker in this relatively simple OCP, lets reduce the NLP tolerance and mesh tolerance. And lets add more collocations points by increasing the number of mesh sections to account for the lower tolerances."
