crossref to examples 1

--- a/docs/BlockSlide_1.ipynb
+++ b/docs/BlockSlide_1.ipynb
@@ -8,12 +8,12 @@
    "source": [
     "# Block Slide 1\n",
     "## OCP Description\n",
-    "To first show simple implementation of an optimization in pycollo we will solve a block slide. A block will be pushed in 1D by a force (Fx) an should reach a certain position ending with 0 speed with friction. The objective is to minimize pushing force. To describe this problem we need two state variables (position x and speed dx), one control variable (Applied force Fx), and three static parameters to describe friction (gravitation g, mass m, and coefficient of friction mu). We will introduce a second order differential to be able to solve the differential equations for the equations of motion."
+    "To first show simple implementation of an [OptimalControlProblem](_autosummary/pycollo.optimal_control_problem.OptimalControlProblem.rst#pycollo.optimal_control_problem.OptimalControlProblem)(OCP) in pycollo we will solve a block slide. A block will be pushed in 1D by a force (Fx) and should reach a certain position ending with 0 speed with friction. The [objective function](_autosummary/pycollo.optimal_control_problem.OptimalControlProblem.rst#pycollo.optimal_control_problem.OptimalControlProblem.objective_function) is to minimize pushing force. To describe this problem we need two [state variables](_autosummary/pycollo.phase.Phase.rst#pycollo.phase.Phase.state_variables) (position x and speed dx), one [control variable](_autosummary/pycollo.phase.Phase.rst#pycollo.phase.Phase.control_variables) (Applied force Fx), and three static [parameters variables](_autosummary/pycollo.optimal_control_problem.OptimalControlProblem.rst#pycollo.optimal_control_problem.OptimalControlProblem.parameter_variables) to describe friction (gravitation g, mass m, and coefficient of friction mu). We will introduce a second order differential by means of the [state equations](_autosummary/pycollo.phase.Phase.rst#pycollo.phase.Phase.state_equations) to be able to solve the differential equations for the equations of motion."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "48d93492",
    "metadata": {},
    "outputs": [],
@@ -46,13 +46,13 @@
    "id": "ae5dfdb7",
    "metadata": {},
    "source": [
-    "## Parameter variables\n",
-    "To initialise an OCP in pycollo start by creating the name and introducing optimised parameters. These are provided in a list or tuple. When these variables are optimised, they will be optimised to a single constant number over all phases. It is good to note that ALWAYS when you want anything to be optimised, make sure bounds and guesses are supplied, otherwise Pycollo cannot run. Bounds can be assigned with list of list, tuples, array, or dictionary."
+    "## [Parameters variables](_autosummary/pycollo.optimal_control_problem.OptimalControlProblem.rst#pycollo.optimal_control_problem.OptimalControlProblem.parameter_variables)\n",
+    "To initialise an [OCP](_autosummary/pycollo.optimal_control_problem.OptimalControlProblem.rst#pycollo.optimal_control_problem.OptimalControlProblem) in pycollo start by creating the name and introducing optimised parameters. These are provided in a list or tuple. When these variables are optimised, they will be optimised to a single constant number over all [phases](_autosummary/pycollo.phase.Phase.rst). It is good to note that ALWAYS when you want anything to be optimised, make sure bounds and guesses are supplied, otherwise Pycollo cannot run. Bounds can be assigned with list of list, tuples, array, or dictionary."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "36cc74de",
    "metadata": {},
    "outputs": [],
@@ -72,13 +72,13 @@
    "id": "65cc77dc",
    "metadata": {},
    "source": [
-    "## Problem specific auxiliary data\n",
-    "Non optimised static parameters should be assigned a numerical value. This is done through auxiliary data. Auxiliary data is a dictionary where symbols can be assigned to numerical values, or sympy expressions(we will show this later). If you want to exclude the variables from all equations in the OCP, you can make sure the variables are numerical before introducing them into the pycollo.OptimalControlProblem"
+    "## Problem specific [auxiliary data](_autosummary/pycollo.optimal_control_problem.OptimalControlProblem.rst#pycollo.optimal_control_problem.OptimalControlProblem.auxiliary_data)\n",
+    "Non optimised static parameters should be assigned a numerical value. This is done through [auxiliary data](_autosummary/pycollo.optimal_control_problem.OptimalControlProblem.rst#pycollo.optimal_control_problem.OptimalControlProblem.auxiliary_data). [Auxiliary data](_autosummary/pycollo.optimal_control_problem.OptimalControlProblem.rst#pycollo.optimal_control_problem.OptimalControlProblem.auxiliary_data) is a dictionary where symbols can be assigned to numerical values, or sympy expressions(we will show this later). If you want to exclude the variables from all equations in the [OCP](_autosummary/pycollo.optimal_control_problem.OptimalControlProblem.rst#pycollo.optimal_control_problem.OptimalControlProblem), you can make sure the variables are numerical before introducing them into the OCP_instance."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "30bc9854",
    "metadata": {},
    "outputs": [],
@@ -92,13 +92,13 @@
    "id": "5c313be8",
    "metadata": {},
    "source": [
-    "## Phases\n",
-    "The OCP is introduced, now we should start by introducing the phases. Eventhough we are only using a single phase for this OCP, the nature of Pycollo is multiphase, so phases should always be declared."
+    "## [Phases](_autosummary/pycollo.phase.Phase.rst)\n",
+    "The [OCP](_autosummary/pycollo.optimal_control_problem.OptimalControlProblem.rst#pycollo.optimal_control_problem.OptimalControlProblem) is introduced, now we should start by introducing the [phases](_autosummary/pycollo.phase.Phase.rst). Eventhough we are only using a single [phase](_autosummary/pycollo.phase.Phase.rst) for this [OCP](_autosummary/pycollo.optimal_control_problem.OptimalControlProblem.rst#pycollo.optimal_control_problem.OptimalControlProblem), the nature of Pycollo is multiphase, so [phases](_autosummary/pycollo.phase.Phase.rst) should always be declared."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "e2c75a26",
    "metadata": {},
    "outputs": [],
@@ -113,12 +113,12 @@
    "metadata": {},
    "source": [
     "## Time\n",
-    "Each phase typically has a certain timespan. We wan't the time to start at 0 and will constrain the OCP to do so. By setting a single numerical number the initial time will be 0. Pycollo allows the initial and final time variables to be optimised. When a bound is provided time will be optimised. In this example, we don't know what the final time will be and thus final time will be optimised by a provided bound. A guess should be provided for time. Time guess should minimally be for the initial time and final time, but can expand to as many points as needed by providing a list of n numbers. Make sure to match length n with all other guesses (except for problem.guess.parameter_variables)"
+    "Each [phase](_autosummary/pycollo.phase.Phase.rst) typically has a certain timespan. We wan't the time to start at 0 and will constrain the [OCP](_autosummary/pycollo.optimal_control_problem.OptimalControlProblem.rst#pycollo.optimal_control_problem.OptimalControlProblem) to do so. By setting a single numerical number the [initial time](_autosummary/pycollo.phase.Phase.rst#pycollo.phase.Phase.initial_time_variable) will be 0. Pycollo allows the initial and final time variables to be optimised. When a bound is provided time will be optimised. In this example, we don't know what the [final time](_autosummary/pycollo.phase.Phase.rst#pycollo.phase.Phase.final_time_variable) will be and thus will be optimised by a provided bound. A [guess](_autosummary/pycollo.guess.rst) should be provided for time. Time guess should minimally be for the initial time and final time, but can expand to as many points as needed by providing a list of n numbers. Make sure to match length n with all other guesses (except for [parameter variables](_autosummary/pycollo.optimal_control_problem.OptimalControlProblem.rst#pycollo.optimal_control_problem.OptimalControlProblem.parameter_variables) and [integral variables](_autosummary/pycollo.phase.Phase.rst#pycollo.phase.Phase.integral_variables) since they will always converge to a single number)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "1ac5247a",
    "metadata": {},
    "outputs": [],
@@ -134,13 +134,13 @@
    "id": "c4545a73",
    "metadata": {},
    "source": [
-    "## State variables, initialisation and bounds\n",
-    "The phase should know what the state variables and control variables are. Variables should be sympy symbols. Bounds and guesses have to be numerical and cannot include symbolic variables. Bounds are defined as the allowable operating range of the given variables. Bounds can be provided to Pycollo as a list, list of list, tuple of list, numpy array, or dictionary. When the bounds ar supplied with a list, tuple or numpy array, Pycollo will couple the values with by index. Bounds are set outside around the objective with a reasonable amount of play such that the optimisation will not operate at it's bound (unless there is an actual bound in the problem)."
+    "## [State variables](_autosummary/pycollo.phase.Phase.rst#pycollo.phase.Phase.state_variables), initialisation and [bounds](_autosummary/pycollo.bounds.rst)\n",
+    "The [phase](_autosummary/pycollo.phase.Phase.rst) should know what the state variables and control variables are. Variables should be sympy symbols. [Bounds](_autosummary/pycollo.bounds.rst) and [guesses](_autosummary/pycollo.guess.rst) have to be numerical and cannot include symbolic variables. Bounds are defined as the allowable operating range of the given variables. Bounds can be provided to Pycollo as a list, list of list, tuple of list, numpy array, or dictionary. When the bounds are supplied with a list, tuple or numpy array, Pycollo will couple the values with by index. Bounds are set such that the objective is feasible and a reasonable amount of play such that the optimisation will not operate at it's bound (unless there is an actual bound in the problem)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "6d278e6d",
    "metadata": {},
    "outputs": [],
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "876295ab",
    "metadata": {},
    "outputs": [],
@@ -176,12 +176,12 @@
    "id": "cb9b1a77",
    "metadata": {},
    "source": [
-    "Now the optimiser should know where the numerical initial and final state variables of this phase. Once again, when this should be optimised, you can assign a bound to these values, just like the parameter variables. Initial and final state constraints can also be assigned by a list, array or tuple"
+    "Now the optimiser should know where the numerical initial and final state variables of this [phase](_autosummary/pycollo.phase.Phase.rst). Once again, when this should be optimised, you can assign a bound to these values, just like the parameter variables. Initial and final state constraints can also be assigned by a list, array or tuple"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "8acb7b1f",
    "metadata": {},
    "outputs": [],
@@ -200,13 +200,13 @@
    "id": "9a61e3ab",
    "metadata": {},
    "source": [
-    "## Guess\n",
+    "## [Guess](_autosummary/pycollo.guess.rst)\n",
     "The state variables are optimised, and thus need a guess. The guess of the state variables should, just like time, minimally include initial and final time. When n number of points is used for the time guess, state_variables guess should have n number of guesses per variable wich match the time by index. Minimal guessing would include initial and final time variables. Guesses are assigned with a list of lists, tuple, or array. Usually a zero guess seed is sufficient in this method. To converge quicker or make sure no local minima is found, proper guessing is needed. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "cf1c9e53",
    "metadata": {},
    "outputs": [],
@@ -220,13 +220,13 @@
    "id": "977be00c",
    "metadata": {},
    "source": [
-    "## Control variables\n",
-    "The control variables are handeled the same as state variables, but don't need initial and final state constraints:"
+    "## [Control variables](_autosummary/pycollo.phase.Phase.rst#pycollo.phase.Phase.control_variables)\n",
+    "The control variables are handeled the same as state variables, but don't need initial and final time constraints:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "e05fa48b",
    "metadata": {},
    "outputs": [],
@@ -244,13 +244,13 @@
    "id": "1eb1a0b7",
    "metadata": {},
    "source": [
-    "## State equations\n",
+    "## [State equations](_autosummary/pycollo.phase.Phase.rst#pycollo.phase.Phase.state_equations)\n",
     "The integration over time can only be done when the differential equations of the blockslide are provided to Pycollo. The differential equations can be provided to Pycollo in three ways. First you can provide the equations directly:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "519ea7d1",
    "metadata": {},
    "outputs": [],
@@ -267,13 +267,13 @@
    "id": "f4305ec2",
    "metadata": {},
    "source": [
-    "## Phase specific auxiliary data\n",
+    "## Phase specific [auxiliary data](_autosummary/pycollo.phase.Phase.rst#pycollo.phase.Phase.auxiliary_data)\n",
     "Secondly, you can provide it through auxiliary data, which results in fundamentally the same solution. Here you can see that auxiliary data can be used to assign expressions to variables. There are two kinds of auxiliary data: 1. Auxiliary data valid for all phases (problem.auxiliary_data) or specific per phase (phase_A.auxiliary_data). This can be helpful because constants can be different per phase."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "1c33a6f7",
    "metadata": {},
    "outputs": [],
@@ -296,13 +296,13 @@
    "id": "d21bd2f9",
    "metadata": {},
    "source": [
-    "## Path constraints\n",
+    "## [Path constraints](_autosummary/pycollo.phase.Phase.rst#pycollo.phase.Phase.path_constraints)\n",
     "Thirdly, you can provide state equations with path constraints (also known as, inequality constraints). This is fundamentally different from the previous methods since the equations will be handled in the constraint space. Usually this will result in quicker, less acurate results (depending on NLP tolerance), but is sometimes necesary for example in bang bang control. We will not use this for now because this is not necessary. Later expansion of this example will elaborate on path constraints"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "5164a6fb",
    "metadata": {},
    "outputs": [],
@@ -317,13 +317,13 @@
    "id": "060c4a02",
    "metadata": {},
    "source": [
-    "## Integrand functions\n",
-    "The only step left is to implement an objective. The objective is to slide the block to the endpoint while minimizing input Fx. To make sure we minimize Fx over the whole time domain we should integrate Fx. To include negative effort in the equation we can square Fx. The bounds should be given for initial and final time, and the guess is a single number, since the output of the function will always result in a single number. "
+    "## [Integrand functions](_autosummary/pycollo.phase.Phase.rst#pycollo.phase.Phase.integrand_functions)\n",
+    "The only step left is to implement an objective function. The objective is to slide the block to the endpoint while minimizing input Fx. To make sure we minimize Fx over the whole time domain we should integrate Fx. To include negative effort in the equation we can square Fx. The bounds should be given for initial and final time, and the [Guess](_autosummary/pycollo.guess.rst) is a single number, since the output of the function will always result in a single number. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "8874e0ff",
    "metadata": {},
    "outputs": [],
@@ -339,13 +339,13 @@
    "id": "9af9fdcb",
    "metadata": {},
    "source": [
-    "## Objective function\n",
+    "## [Objective function](_autosummary/pycollo.optimal_control_problem.OptimalControlProblem.rst#pycollo.optimal_control_problem.OptimalControlProblem.objective_function)\n",
     "Objective functions should always be a function of initial or final state variables."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "60af8ae8",
    "metadata": {},
    "outputs": [],
@@ -360,13 +360,13 @@
    "id": "c470d28c",
    "metadata": {},
    "source": [
-    "## Settings\n",
-    "Before solving the OCP we can alter Pycollo's default settings such as number of collocation points, amount of mesh sections, NLP tolerance, see al options in [INSERT_LINK_TO_SETTINGS]. For now we will use Pycollo's default sttings and will use it's internal plotting method to show the results. Then we will solve the OCP with:"
+    "## [Settings](_autosummary/pycollo.settings.rst)\n",
+    "Before solving the OCP we can alter Pycollo's default settings such as number of collocation points, amount of mesh sections, NLP tolerance. Click on [settings](_autosummary/pycollo.settings.rst) to see all options. For now we will use Pycollo's default settings and will use it's internal plotting method to show the results. Then we will solve the OCP with:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "9851c13a",
    "metadata": {},
    "outputs": [],
@@ -380,12 +380,12 @@
    "id": "f1796197",
    "metadata": {},
    "source": [
-    "## Solve"
+    "## [Initialise](_autosummary/pycollo.optimal_control_problem.OptimalControlProblem.rst#pycollo.optimal_control_problem.OptimalControlProblem.initialise) and [solve](_autosummary/pycollo.optimal_control_problem.OptimalControlProblem.rst#pycollo.optimal_control_problem.OptimalControlProblem.solve)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "0cfc0aa1",
    "metadata": {},
    "outputs": [
@@ -573,8 +573,8 @@
    "id": "0c5a3c66",
    "metadata": {},
    "source": [
-    "## Solution\n",
-    "All results can be found in problem.solution, see [INSERT_LINK_TO_SOLUTION]"
+    "## [Solution](_autosummary/pycollo.optimal_control_problem.OptimalControlProblem.rst#pycollo.optimal_control_problem.OptimalControlProblem.solution)\n",
+    "All results can be found in the OCP_instance.solution, click [solution](_autosummary/pycollo.optimal_control_problem.OptimalControlProblem.rst#pycollo.optimal_control_problem.OptimalControlProblem.solution) for more information."
    ]
   },
   {
