minor updates blockslide 3

--- a/docs/BlockSlide_3.ipynb
+++ b/docs/BlockSlide_3.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,12 +93,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will split the two phases by the two points the block should reach. The first phase will stop at the midpoint. Final state of dx and dy should be unconstrained and are set at the same limit as the statebounds. "
+    "We will split the two phases by the two checkpoints the block should reach. The first phase will terminate at the midpoint. Final state of dx and dy should be unconstrained and are set at the same limit as the statebounds. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,10 +258,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "## Settings\n",
     "To converge quicker in this relatively simple OCP, lets reduce the NLP tolerance and mesh tolerance. And lets add more collocations points by increasing the number of mesh sections to account for the lower tolerances."
@@ -269,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -317,19 +316,26 @@
       "Initialising mesh iteration #1.\n",
       "===============================\n",
       "\n",
-      "Guess interpolated to iteration mesh in 1.46ms.\n",
-      "Scaling initialised in 108.67us.\n",
-      "Initial guess scaled in 10.62us.\n",
-      "Scaling generated in 97.59ms.\n",
-      "NLP generated in 740.12ms.\n",
-      "Mesh-specific bounds generated in 802.12us.\n",
+      "Guess interpolated to iteration mesh in 902.04us.\n",
+      "Scaling initialised in 69.08us.\n",
+      "Initial guess scaled in 9.08us.\n",
+      "Scaling generated in 99.30ms.\n",
+      "NLP generated in 663.97ms.\n",
+      "Mesh-specific bounds generated in 757.21us.\n",
       "\n",
-      "Mesh iteration #1 initialised in 840.10ms.\n",
+      "Mesh iteration #1 initialised in 765.01ms.\n",
       "\n",
       "\n",
       "==========================\n",
       "Solving mesh iteration #1.\n",
       "==========================\n",
+      "\n",
+      "\n",
+      "******************************************************************************\n",
+      "This program contains Ipopt, a library for large-scale nonlinear optimization.\n",
+      " Ipopt is released as open source code under the Eclipse Public License (EPL).\n",
+      "         For more information visit https://github.com/coin-or/Ipopt\n",
+      "******************************************************************************\n",
       "\n",
       "This is Ipopt version 3.14.11, running with linear solver MUMPS 5.2.1.\n",
       "\n",
@@ -472,23 +478,23 @@
       "Number of equality constraint Jacobian evaluations   = 97\n",
       "Number of inequality constraint Jacobian evaluations = 97\n",
       "Number of Lagrangian Hessian evaluations             = 95\n",
-      "Total seconds in IPOPT                               = 0.460\n",
+      "Total seconds in IPOPT                               = 0.511\n",
       "\n",
       "EXIT: Optimal Solution Found.\n",
       "      solver  :   t_proc      (avg)   t_wall      (avg)    n_eval\n",
-      "       nlp_f  | 173.00us (  1.21us) 152.79us (  1.07us)       143\n",
-      "       nlp_g  |   7.64ms ( 53.40us)   7.42ms ( 51.87us)       143\n",
-      "  nlp_grad_f  | 381.00us (  3.89us) 349.25us (  3.56us)        98\n",
-      "  nlp_hess_l  |  12.72ms (135.29us)  12.70ms (135.13us)        94\n",
-      "   nlp_jac_g  |  12.89ms (131.51us)  12.90ms (131.60us)        98\n",
-      "       total  | 460.76ms (460.76ms) 460.61ms (460.61ms)         1\n",
+      "       nlp_f  | 220.00us (  1.54us) 188.50us (  1.32us)       143\n",
+      "       nlp_g  |   9.16ms ( 64.06us)   8.69ms ( 60.75us)       143\n",
+      "  nlp_grad_f  | 503.00us (  5.13us) 474.92us (  4.85us)        98\n",
+      "  nlp_hess_l  |  14.89ms (158.36us)  14.89ms (158.36us)        94\n",
+      "   nlp_jac_g  |  15.10ms (154.07us)  15.12ms (154.33us)        98\n",
+      "       total  | 514.34ms (514.34ms) 516.90ms (516.90ms)         1\n",
       "\n",
       "==================================\n",
       "Post-processing mesh iteration #1.\n",
       "==================================\n",
       "\n",
-      "Mesh iteration #1 solved in 461.23ms.\n",
-      "Mesh iteration #1 post-processed in 249.48ms.\n",
+      "Mesh iteration #1 solved in 517.80ms.\n",
+      "Mesh iteration #1 post-processed in 306.07ms.\n",
       "\n",
       "\n",
       "============================\n",
@@ -501,7 +507,7 @@
       "\n",
       "Adjusting Collocation Mesh: [30, 30] mesh sections\n",
       "\n",
-      "Mesh iteration #1 completed in 1.55s.\n",
+      "Mesh iteration #1 completed in 1.59s.\n",
       "\n"
      ]
     },
@@ -615,7 +621,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
