minor updates blockslide2

--- a/docs/BlockSlide_2.ipynb
+++ b/docs/BlockSlide_2.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -214,19 +214,26 @@
       "Initialising mesh iteration #1.\n",
       "===============================\n",
       "\n",
-      "Guess interpolated to iteration mesh in 1.27ms.\n",
-      "Scaling initialised in 136.04us.\n",
-      "Initial guess scaled in 7.88us.\n",
-      "Scaling generated in 2.86ms.\n",
-      "NLP generated in 63.36ms.\n",
-      "Mesh-specific bounds generated in 257.71us.\n",
+      "Guess interpolated to iteration mesh in 1.26ms.\n",
+      "Scaling initialised in 64.46us.\n",
+      "Initial guess scaled in 4.83us.\n",
+      "Scaling generated in 3.71ms.\n",
+      "NLP generated in 121.48ms.\n",
+      "Mesh-specific bounds generated in 258.42us.\n",
       "\n",
-      "Mesh iteration #1 initialised in 67.89ms.\n",
+      "Mesh iteration #1 initialised in 126.78ms.\n",
       "\n",
       "\n",
       "==========================\n",
       "Solving mesh iteration #1.\n",
       "==========================\n",
+      "\n",
+      "\n",
+      "******************************************************************************\n",
+      "This program contains Ipopt, a library for large-scale nonlinear optimization.\n",
+      " Ipopt is released as open source code under the Eclipse Public License (EPL).\n",
+      "         For more information visit https://github.com/coin-or/Ipopt\n",
+      "******************************************************************************\n",
       "\n",
       "This is Ipopt version 3.14.11, running with linear solver MUMPS 5.2.1.\n",
       "\n",
@@ -284,23 +291,23 @@
       "Number of equality constraint Jacobian evaluations   = 19\n",
       "Number of inequality constraint Jacobian evaluations = 0\n",
       "Number of Lagrangian Hessian evaluations             = 18\n",
-      "Total seconds in IPOPT                               = 0.024\n",
+      "Total seconds in IPOPT                               = 0.049\n",
       "\n",
       "EXIT: Optimal Solution Found.\n",
       "      solver  :   t_proc      (avg)   t_wall      (avg)    n_eval\n",
-      "       nlp_f  |  18.00us (750.00ns)  22.67us (944.46ns)        24\n",
-      "       nlp_g  | 340.00us ( 14.17us) 313.75us ( 13.07us)        24\n",
-      "  nlp_grad_f  |  42.00us (  2.00us)  40.96us (  1.95us)        21\n",
-      "  nlp_hess_l  | 537.00us ( 29.83us) 533.92us ( 29.66us)        18\n",
-      "   nlp_jac_g  | 692.00us ( 34.60us) 690.09us ( 34.50us)        20\n",
-      "       total  |  24.59ms ( 24.59ms)  24.60ms ( 24.60ms)         1\n",
+      "       nlp_f  |  23.00us (958.33ns)  24.79us (  1.03us)        24\n",
+      "       nlp_g  | 298.00us ( 12.42us) 288.12us ( 12.01us)        24\n",
+      "  nlp_grad_f  |  60.00us (  2.86us)  46.62us (  2.22us)        21\n",
+      "  nlp_hess_l  | 472.00us ( 26.22us) 468.54us ( 26.03us)        18\n",
+      "   nlp_jac_g  | 617.00us ( 30.85us) 616.00us ( 30.80us)        20\n",
+      "       total  |  37.97ms ( 37.97ms)  60.78ms ( 60.78ms)         1\n",
       "\n",
       "==================================\n",
       "Post-processing mesh iteration #1.\n",
       "==================================\n",
       "\n",
-      "Mesh iteration #1 solved in 24.88ms.\n",
-      "Mesh iteration #1 post-processed in 44.07ms.\n",
+      "Mesh iteration #1 solved in 61.47ms.\n",
+      "Mesh iteration #1 post-processed in 50.82ms.\n",
       "\n",
       "\n",
       "============================\n",
@@ -313,7 +320,7 @@
       "\n",
       "Adjusting Collocation Mesh: [10, 10] mesh sections\n",
       "\n",
-      "Mesh iteration #1 completed in 136.83ms.\n",
+      "Mesh iteration #1 completed in 239.06ms.\n",
       "\n"
      ]
     },
